# CompetitiveProgramming

./: CMakeLists.txt
Codeforces/: 1787B.cpp  1826B.cpp  1826C.cpp  1838C.cpp  1844D.cpp  1850F.cpp  1864C.cpp  1881D.cpp  1899B.cpp  1902C.cpp  1909B.cpp  1925B.cpp  1932B.cpp  1933C.cpp  1933D.cpp  1944A.cpp  Round 381C.cpp  Round100EducationalB.cpp  Round107C.cpp  Round116CEducational.cpp  Round146A.cpp  Round14GlobalC.cpp  Round177B.cpp  Round17A.cpp  Round17Educational.cpp  Round218B.cpp  Round219A.cpp  Round235C.cpp  Round240B.cpp  Round26BetaB.cpp  Round277-5C.cpp  Round287B.cpp  Round300B.cpp  Round304C.cpp  Round306B.cpp  Round321B.cpp  Round326B.cpp  Round345C.cpp  Round363A.cpp  Round367C.cpp  (+48 more)
USACO/: friday.cpp  gift1.cpp  ride.cpp
UVA/: 100The3n1Problem.cpp  10394TwinPrimes.cpp
