cmake_minimum_required(VERSION 3.22)
project(CompetitiveProgramming)

set(CMAKE_CXX_STANDARD 14)
add_executable(Round304C Codeforces/Round304C.cpp)

add_executable(Round345C Codeforces/Round345C.cpp)
add_executable(Round218B Codeforces/Round218B.cpp)
add_executable(Round326B Codeforces/Round326B.cpp)
add_executable(10394TwinPrimes UVA/10394TwinPrimes.cpp)
add_executable(Round107C Codeforces/Round107C.cpp)
add_executable(Round67CBeta Codeforces/Round67CBeta.cpp)