cmake_minimum_required(VERSION 3.22)
project(CompetitiveProgramming)

set(CMAKE_CXX_STANDARD 14)
add_executable(Round304C Codeforces/Round304C.cpp)

add_executable(Round345C Codeforces/Round345C.cpp)
add_executable(Round218B Codeforces/Round218B.cpp)
add_executable(Round326B Codeforces/Round326B.cpp)
add_executable(10394TwinPrimes UVA/10394TwinPrimes.cpp)
add_executable(Round107C Codeforces/Round107C.cpp)
add_executable(Round67CBeta Codeforces/Round67CBeta.cpp)
add_executable(Round321B Codeforces/Round321B.cpp)
add_executable(Round219A Codeforces/Round219A.cpp)
add_executable(ride USACO/ride.cpp)
add_executable(gift1 USACO/gift1.cpp)
add_executable(friday USACO/friday.cpp)
add_executable(Round363A Codeforces/Round363A.cpp)
add_executable(Round723B Codeforces/Round723B.cpp)
add_executable(Round627D Codeforces/Round627D.cpp)
add_executable(Round638B Codeforces/Round638B.cpp)
add_executable(Round287B Codeforces/Round287B.cpp)
add_executable(Round651C Codeforces/Round651C.cpp)
add_executable(Round574C Codeforces/Round574C.cpp)
add_executable(Round648C Codeforces/Round648C.cpp)
add_executable(Round653D Codeforces/Round653D.cpp)
add_executable(Round577C Codeforces/Round577C.cpp)
add_executable(Round240B Codeforces/Round240B.cpp)